--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==3.1.0
 flatbuffers==24.12.23
 fonttools==4.55.3
 gast==0.6.0
+git-filter-repo==2.47.0
 google-pasta==0.2.0
 grpcio==1.69.0
 gunicorn==23.0.0
