--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
+filelock==3.16.1
 Flask==3.1.0
 flatbuffers==24.12.23
 fonttools==4.55.3
+fsspec==2024.12.0
 gast==0.6.0
 git-filter-repo==2.47.0
 google-pasta==0.2.0
@@ -29,7 +31,9 @@ MarkupSafe==3.0.2
 matplotlib==3.10.0
 mdurl==0.1.2
 ml-dtypes==0.4.1
+mpmath==1.3.0
 namex==0.0.8
+networkx==3.4.2
 numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.14.0
@@ -48,12 +52,14 @@ scipy==1.15.1
 seaborn==0.13.2
 setuptools==75.8.0
 six==1.17.0
+sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow_intel==2.18.0
 termcolor==2.5.0
 threadpoolctl==3.5.0
+torch==2.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
